force-app/main/default/objects/Payment_Line_Item__c/fields/Concession_Applied__c.field-meta.xml
<CustomField>
    <fullName>Concession_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concession Applied</label>
    <type>Checkbox</type>
</CustomField>