force-app/main/default/objects/Payment_Line_Item__c/fields/Concession_BPS__c.field-meta.xml
<CustomField>
    <fullName>Concession_BPS__c</fullName>
    <label>Concession BPS</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>