force-app/main/default/objects/Payment_Line_Item__c/fields/Employee_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Employee_Pay_Period__c</fullName>
    <label>Employee Pay Period</label>
    <referenceTo>Employee_Pay_Period__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>