force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_BPS__c.field-meta.xml
<CustomField>
    <fullName>Payment_BPS__c</fullName>
    <label>Payment BPS</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>