force-app/main/default/objects/Payment_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Employee_Pay_Period__c</columns>
    <columns>Payment_BPS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>